--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 <div>✔ Complete the Steps correctly &amp; congratulations.</div>
 </div>
 </div>
-<div class="de elImageWrapper de-image-block elAlign_center elMargin0 de-editable ui-droppable" id="tmp_image-92606" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer;" data-imagelink="www.google.com" aria-disabled="false">
-<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" class="elIMG ximg" alt="" width="500" data-imagelink="www.google.com" data-src="https://i.ibb.co/s2dmm8X/lk23j4lk234n2.png">
+<div class="de elImageWrapper de-image-block elAlign_center elMargin0 de-editable ui-droppable" id="tmp_image-92606" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer;" data-imagelink="https://robochean.github.io/deinsa/mosa.html" aria-disabled="false">
+<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" class="elIMG ximg" alt="" width="500" data-imagelink="https://robochean.github.io/deinsa/mosa.html" data-src="https://i.ibb.co/s2dmm8X/lk23j4lk234n2.png">
 </div>
 </div>
 </div>
